# ParallelImageProcessor

./: LICENSE  README.md
TaskPipeline/: CMakeLists.txt
TaskPipeline/TaskPipeline/: CMakeLists.txt  main.cpp
TaskPipeline/TaskPipelineTests/: CMakeLists.txt  main.cpp
TaskPipeline/libTaskPipeline/: CMakeLists.txt  IPipelineStage.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  PipelineStageExecutor.cpp  PipelineStageExecutor.h  Transformations.cpp  Transformations.h
TaskPipeline/libTaskPipeline/PipelineStages/: GetImageFromDevice.cpp  GetImageFromDevice.h  OutputImage.cpp  OutputImage.h  TransformImage.cpp  TransformImage.h
